# Students

./: Основы алгоритмизации и программирования.docx  задачи.docx
Examples/Mario/: CMakeLists.txt  Hero.cpp  Hero.h  Map.cpp  Map.h  block.cpp  block.h  main.cpp  readme.md  readmi.md
Examples/Mario/assets/levels/: level1.txt
Examples/Mario/levels/: level1.txt
Examples/inheritance/: CMakeLists.txt  main.cpp  readme.md
Examples/snowflake/: CMakeLists.txt  main.cpp  readme.md
